fix(optionstile): wc parity - spacing

--- a/packages/ibm-products-web-components/src/components/options-tile/options-tile.scss
+++ b/packages/ibm-products-web-components/src/components/options-tile/options-tile.scss
@@ -86,6 +86,7 @@ $block-class: #{$prefix}--options-tile;
       align-items: center;
       color: $text-secondary;
       gap: $spacing-02;
+      margin-block-start: $spacing-02;
 
       &--locked {
         color: $text-secondary;
@@ -119,6 +120,12 @@ $block-class: #{$prefix}--options-tile;
       padding-block-start: $spacing-03;
       padding-inline: $spacing-05;
       padding-inline-start: $spacing-09;
+    }
+  }
+
+  .#{$block-class}--lg {
+    .#{$block-class}__summary {
+      margin-block-start: $spacing-01;
     }
   }
 
